--- a/INS_F1_NONE.ipynb
+++ b/INS_F1_NONE.ipynb
@@ -343,7 +343,7 @@
    "source": [
     "from sklearn import svm\n",
     "\n",
-    "clf_svm = svm.SVC(kernel='rbf',C=10, gamma=0.01)\n",
+    "clf_svm = svm.SVC(kernel='rbf')\n",
     "clf_svm.fit(X_train,y_train)"
    ]
   },
