--- a/INS_F2_SMOTE.ipynb
+++ b/INS_F2_SMOTE.ipynb
@@ -371,55 +371,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "40e32687",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.svm import SVC  \n",
-    "\n",
-    "# defining parameter range\n",
-    "# defining parameter range\n",
-    "param_grid = {'C': [0.1, 1, 10, 100, 1000],\n",
-    "              'gamma': [1, 0.1, 0.01, 0.001, 0.0001],\n",
-    "              'kernel': ['rbf', 'poly', 'sigmoid']}\n",
-    "\n",
-    "grid = GridSearchCV(SVC(),param_grid,refit=True,verbose=3)\n",
-    "grid.fit(X_train,y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50571f7d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print best parameter after tuning \n",
-    "print(grid.best_params_)\n",
-    " \n",
-    "# print how our model looks after hyper-parameter tuning\n",
-    "print(grid.best_estimator_)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "900586b1",
-   "metadata": {},
-   "source": [
-    "Pay attention: here next one need to customized to best model with parameter previous box comes out"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "1f847974",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn import svm\n",
     "\n",
-    "clf_svm = svm.SVC(kernel='rbf',C=10, gamma=0.01)\n",
+    "clf_svm = svm.SVC(kernel='rbf')\n",
     "clf_svm.fit(X_train,y_train)"
    ]
   },
