--- a/INS_ALL_ROSE.ipynb
+++ b/INS_ALL_ROSE.ipynb
@@ -366,47 +366,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23496616",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Decision tree model\n",
-    "# Decision Tree\n",
-    "clf = DecisionTreeClassifier()\n",
-    "\n",
-    "parameters = {'max_depth': [2, 3, 5, 6, 8, 10], \n",
-    "              'min_samples_split': [10, 20, 30, 50, 100],\n",
-    "              'min_samples_leaf': [1, 5, 8, 10, 30],\n",
-    "             }\n",
-    "\n",
-    "acc_scorer = make_scorer(accuracy_score)\n",
-    "\n",
-    "#grid search\n",
-    "grid_obj = GridSearchCV(clf, parameters, scoring=acc_scorer)\n",
-    "grid_obj = grid_obj.fit(X_train, y_train)\n",
-    "\n",
-    "# Set the clf to the best combination of parameters\n",
-    "clf = grid_obj.best_estimator_\n",
-    "\n",
-    "clf.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "79beefcf",
-   "metadata": {},
-   "source": [
-    "Pay attention: here next one need to customized to best model with parameter previous box comes out"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "5da99828",
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf_gini = DecisionTreeClassifier(criterion='gini', max_depth=10, min_samples_leaf=5, min_samples_split=10)\n",
+    "clf_gini = DecisionTreeClassifier(criterion='gini', max_depth=10, min_samples_leaf=5)\n",
     "\n",
     "\n",
     "# fit the model\n",
@@ -524,21 +488,7 @@
    "source": [
     "rf_clf = RandomForestClassifier()\n",
     "\n",
-    "parameters = {'n_estimators': [10,20,25],\n",
-    "              'max_depth': [2, 3, 5, 6, 8, 10], \n",
-    "              'min_samples_split': [10, 20, 30, 50, 100],\n",
-    "              'min_samples_leaf': [1, 5, 8, 10, 30]\n",
-    "             }\n",
-    "\n",
-    "acc_scorer = make_scorer(accuracy_score)\n",
-    "\n",
-    "#grid search\n",
-    "grid_obj = GridSearchCV(rf_clf, parameters, scoring=acc_scorer)\n",
-    "grid_obj = grid_obj.fit(X_train, y_train)\n",
-    "\n",
-    "# Set the clf to the best combination of parameters\n",
-    "rf_clf = grid_obj.best_estimator_\n",
-    "\n",
+   
     "rf_clf.fit(X_train, y_train)"
    ]
   },
