default DT,RF, SVM

--- a/INS_ALL_SMOTE.ipynb
+++ b/INS_ALL_SMOTE.ipynb
@@ -366,47 +366,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23496616",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Decision tree model\n",
-    "# Decision Tree\n",
-    "clf = DecisionTreeClassifier()\n",
-    "\n",
-    "parameters = {'max_depth': [2, 3, 5, 6, 8, 10], \n",
-    "              'min_samples_split': [10, 20, 30, 50, 100],\n",
-    "              'min_samples_leaf': [1, 5, 8, 10, 30],\n",
-    "             }\n",
-    "\n",
-    "acc_scorer = make_scorer(accuracy_score)\n",
-    "\n",
-    "#grid search\n",
-    "grid_obj = GridSearchCV(clf, parameters, scoring=acc_scorer)\n",
-    "grid_obj = grid_obj.fit(X_train, y_train)\n",
-    "\n",
-    "# Set the clf to the best combination of parameters\n",
-    "clf = grid_obj.best_estimator_\n",
-    "\n",
-    "clf.fit(X_train, y_train)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "79beefcf",
-   "metadata": {},
-   "source": [
-    "Pay attention: here next one need to customized to best model with parameter previous box comes out"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "5da99828",
    "metadata": {},
    "outputs": [],
    "source": [
-    "clf_gini = DecisionTreeClassifier(criterion='gini', max_depth=10, min_samples_leaf=5, min_samples_split=10)\n",
+    "clf_gini = DecisionTreeClassifier(criterion='gini', max_depth=10, min_samples_leaf=5)\n",
     "\n",
     "\n",
     "# fit the model\n",
@@ -523,21 +487,6 @@
    "outputs": [],
    "source": [
     "rf_clf = RandomForestClassifier()\n",
-    "\n",
-    "parameters = {'n_estimators': [10,20,25],\n",
-    "              'max_depth': [2, 3, 5, 6, 8, 10], \n",
-    "              'min_samples_split': [10, 20, 30, 50, 100],\n",
-    "              'min_samples_leaf': [1, 5, 8, 10, 30]\n",
-    "             }\n",
-    "\n",
-    "acc_scorer = make_scorer(accuracy_score)\n",
-    "\n",
-    "#grid search\n",
-    "grid_obj = GridSearchCV(rf_clf, parameters, scoring=acc_scorer)\n",
-    "grid_obj = grid_obj.fit(X_train, y_train)\n",
-    "\n",
-    "# Set the clf to the best combination of parameters\n",
-    "rf_clf = grid_obj.best_estimator_\n",
     "\n",
     "rf_clf.fit(X_train, y_train)"
    ]
@@ -711,55 +660,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c5c7a984",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.svm import SVC  \n",
-    "\n",
-    "# defining parameter range\n",
-    "# defining parameter range\n",
-    "param_grid = {'C': [0.1, 1, 10, 100, 1000],\n",
-    "              'gamma': [1, 0.1, 0.01, 0.001, 0.0001],\n",
-    "              'kernel': ['rbf', 'poly', 'sigmoid']}\n",
-    "\n",
-    "grid = GridSearchCV(SVC(),param_grid,refit=True,verbose=3)\n",
-    "grid.fit(X_train,y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "50571f7d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# print best parameter after tuning \n",
-    "print(grid.best_params_)\n",
-    " \n",
-    "# print how our model looks after hyper-parameter tuning\n",
-    "print(grid.best_estimator_)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "900586b1",
-   "metadata": {},
-   "source": [
-    "Pay attention: here next one need to customized to best model with parameter previous box comes out"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "1f847974",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn import svm\n",
     "\n",
-    "clf_svm = svm.SVC(kernel='rbf',C=10, gamma=0.01)\n",
+    "clf_svm = svm.SVC(kernel='rbf')\n",
     "clf_svm.fit(X_train,y_train)"
    ]
   },
